GEM-19 Add GenreHandler for split API endpoints.
